Minimal VM build is broken after JDK-8199067, JDK-8202638

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b13

      /pool/buildbot/slaves/sobornost/jdkX/build/test/hotspot/gtest/runtime/test_committed_virtualmemory.cpp: In static member function 'static void CommittedVirtualMemoryTest::test()':
      /pool/buildbot/slaves/sobornost/jdkX/build/test/hotspot/gtest/runtime/test_committed_virtualmemory.cpp:45:5: error: 'VirtualMemoryTracker' has not been declared
           VirtualMemoryTracker::add_reserved_region(stack_end, stack_size, CALLER_PC, mtThreadStack);
           ^~~~~~~~~~~~~~~~~~~~
      /pool/buildbot/slaves/sobornost/jdkX/build/test/hotspot/gtest/runtime/test_committed_virtualmemory.cpp:48:5: error: 'VirtualMemoryTracker' has not been declared
           VirtualMemoryTracker::snapshot_thread_stacks();
           ^~~~~~~~~~~~~~~~~~~~
      /pool/buildbot/slaves/sobornost/jdkX/build/test/hotspot/gtest/runtime/test_committed_virtualmemory.cpp:50:5: error: 'ReservedMemoryRegion' was not declared in this scope
           ReservedMemoryRegion* rmr = VirtualMemoryTracker::_reserved_regions->find(ReservedMemoryRegion(stack_end, stack_size));
           ^~~~~~~~~~~~~~~~~~~~
      /pool/buildbot/slaves/sobornost/jdkX/build/test/hotspot/gtest/runtime/test_committed_virtualmemory.cpp:50:27: error: 'rmr' was not declared in this scope
           ReservedMemoryRegion* rmr = VirtualMemoryTracker::_reserved_regions->find(ReservedMemoryRegion(stack_end, stack_size));
                                 ^~~
      /pool/buildbot/slaves/sobornost/jdkX/build/test/hotspot/gtest/runtime/test_committed_virtualmemory.cpp:50:33: error: 'VirtualMemoryTracker' has not been declared
           ReservedMemoryRegion* rmr = VirtualMemoryTracker::_reserved_regions->find(ReservedMemoryRegion(stack_end, stack_size));
                                       ^~~~~~~~~~~~~~~~~~~~
      In file included from /pool/buildbot/slaves/sobornost/jdkX/build/test/fmw/gtest/include/gtest/gtest.h:1929:0,
                       from /pool/buildbot/slaves/sobornost/jdkX/build/test/hotspot/gtest/unittest.hpp:31,
                       from /pool/buildbot/slaves/sobornost/jdkX/build/test/hotspot/gtest/runtime/test_committed_virtualmemory.cpp:33:
      /pool/buildbot/slaves/sobornost/jdkX/build/test/fmw/gtest/include/gtest/gtest.h:1994:64: error: template argument 1 is invalid
                             EqHelper<GTEST_IS_NULL_LITERAL_(expected)>::Compare, \
                                                                      ^

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: