8202684: Minimal VM build is broken after JDK-8199067, JDK-8202638

Reviewed-by: eosterlund, stuefe